# TUCAN

./: .devcontainer.json  .gitignore  Dockerfile  README.md  cli_app.rb  demo.ipynb  demo_canonicalization.ipynb  inchi.rb  inchi_v1.4.rb  periodic_table.rb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  format_dataset.yml  ruby.yml
canonymous/: canonicalization.py  element_properties.py  utils.py  visualization.py
docs/: demo.ipynb  demo_short.ipynb  demo_short.md  generate_figures.ipynb  refinement_tree.ipynb
graphical_abstract/: graphical_abstract.html  graphical_abstract.ipynb  graphical_abstract.md
notebooks/: RDKit_canonicalization.ipynb  RDKit_canonicalization.py  RDKit_prototype.ipynb  RDKit_prototype_recursive_partitioning.ipynb  molecule_visualization_utils.py  prototype_recursive_partitioning.ipynb  recursive_partitioning.ipynb  recursive_partitioning.py  utils.py
test/: 2-aminopyridine.mol  aspartic_acid.mol  test_canonicalization.rb  test_ninchi.rb  test_utils.rb  utils.rb
test/testfiles/: 2-8-dimethyldecane.mol  B8Cl8.mol  Carboplatin.mol  CrCO3benzene.mol  Fe2CO9.mol  FeCO5.mol  HCl.mol  HOAc.mol  Ir4CO12.mol  Isobutan.mol  Isohexan.mol  Os4CO16.mol  P3As.mol  P4.mol  Paclitaxel.mol  Pemetrexed.mol  README.md  Rubpy3_drawing.cdx  Satraplatin.mol  THF.mol  XeOF4.mol  XeOF4_drawing.cdx  [Fe3(CO)12].mol  benzene.mol  bipyridine.mol  bis-cyclopentadiene.mol  cf3alkyne.mol  cisplatin.mol  cyclobutane.mol  cyclophane.mol  cyclopropane.mol  decaline.mol  diborane1.mol  diborane2.mol  diborane3.mol  diborane4.mol  ethane.mol  ethanol.mol  ferrocene-CH3.mol  ferrocene.mol  (+11 more)
tests/: conftest.py  test_canonicalization.py  test_io.py  test_serialization.py  tests.ipynb  tests_chembl.ipynb  tests_local.ipynb
tests/__snapshots__/: test_serialization.ambr
tests/cfi_rigid_benchmark_graphs/: cfi-rigid-d3-0180-01-1.col  cfi-rigid-d3-0180-02-1.col  cfi-rigid-d3-0180-03-1.col  cfi-rigid-d3-0180-04-1.col  cfi-rigid-d3-0360-01-1.col  cfi-rigid-d3-0360-02-1.col  cfi-rigid-d3-0360-03-1.col  cfi-rigid-d3-0360-04-1.col  cfi-rigid-d3-0540-01-1.col  cfi-rigid-d3-0540-02-1.col  cfi-rigid-d3-0540-03-1.col  cfi-rigid-d3-0540-04-1.col  cfi-rigid-d3-0720-01-1.col  cfi-rigid-d3-0720-02-1.col  cfi-rigid-d3-0720-03-1.col  cfi-rigid-d3-0720-04-1.col  cfi-rigid-d3-0900-01-1.col  cfi-rigid-d3-0900-02-1.col  cfi-rigid-d3-0900-03-1.col  cfi-rigid-d3-0900-04-1.col  cfi-rigid-r2-0068-03-1.col  cfi-rigid-r2-0072-01-1.col  cfi-rigid-r2-0072-02-1.col  cfi-rigid-r2-0072-04-1.col  cfi-rigid-r2-0144-01-1.col  cfi-rigid-r2-0144-02-1.col  cfi-rigid-r2-0144-03-1.col  cfi-rigid-r2-0144-04-1.col  cfi-rigid-r2-0216-01-1.col  cfi-rigid-r2-0216-02-1.col  cfi-rigid-r2-0216-03-1.col  cfi-rigid-r2-0216-04-1.col  cfi-rigid-r2-0288-01-1.col  cfi-rigid-r2-0288-02-1.col  cfi-rigid-r2-0288-03-1.col  cfi-rigid-r2-0288-04-1.col  (+287 more)
tests/molfiles/: TTF.mol  (+24 more)
tucan/: __init__.py  canonicalization.py  element_attributes.py  element_properties.py  graph_attributes.py  graph_utils.py  io.py  serialization.py  test_utils.py  visualization.py
(+363 files in other folders)
