[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tucan"
authors = [{name = "Jan C. Brammer", email = "jan.c.brammer@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

dependencies = [
    "networkx[default] >=2.8.8",
    "matplotlib >=3.6.2",
    "tabulate >=0.9.0",
    "igraph >=0.10.3",
    "antlr4-python3-runtime == 4.11.1"
]

[project.optional-dependencies]
drawing = [
    "plotly",    # interactive 3D drawings
    "notebook",
    "ipywidgets"
]
dev = [
    "black",
    "flake8",
    "pytest",
    "syrupy"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
    -v
    --durations=5"""
testpaths = [
    "tests",
]

[tool.black]    # https://lyz-code.github.io/blue-book/devops/black/
extend-exclude = 'tucan/parser/tucan.*\.py'
